# video-transcriber-rust

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  main.rs  output.rs  transcription.rs
test_files/: test_speech.aiff  test_speech.srt  test_speech.txt
