[package]
name = "wayne-transcriber"
version = "0.1.0"
edition = "2024"
description = "A Rust-based tool for transcribing Wayne Dyer videos using OpenAI Whisper"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
candle-examples = "0.8"
tokenizers = "0.19"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.3"
hound = "3.5"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
